--- a/sass/_bar.scss
+++ b/sass/_bar.scss
@@ -3,7 +3,7 @@
     top: 0;
     display: flex;
     position: fixed;
-    width: 100vw;
+    width: 100%;
     height: $bar-height;
     background-color: $bar-background;
     z-index: 1;
