--- a/sass/_init.scss
+++ b/sass/_init.scss
@@ -5,7 +5,7 @@ body {
 
 body {
     overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-y: auto;
     position: relative;
 }
 
